--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="orange">#FF9800</color>
     <color name="red">#F44336</color>
     <color name="gris">#232323</color>
+    <color name="joli_vert">#1E522D</color>
+
 </resources>
