--- a/app/src/main/res/drawable/rect2.xml
+++ b/app/src/main/res/drawable/rect2.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="#1E522D"
+        android:color="#FF9800"
         android:width="1dp"/>
     <corners
         android:radius="1dp"/>
     <solid
-        android:color="#1E522D"/>
+        android:color="#FF9800"/>
 </shape>
