--- a/app/src/main/res/layout/fragment_edit_appliances.xml
+++ b/app/src/main/res/layout/fragment_edit_appliances.xml
@@ -21,6 +21,10 @@
             android:id="@+id/btnAddAppliance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/rect2"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"
             android:text="Add Appliances"/>
 
         <LinearLayout
@@ -31,11 +35,16 @@
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Back"/>
+            android:background="@drawable/rect3"
+            android:text="Back"
+            android:layout_marginRight="5dp"/>
         <Button
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/rect"
+            android:textColor="@color/white"
+            android:layout_marginLeft="5dp"
             android:text="Save"/>
         </LinearLayout>
     </LinearLayout>
