--- a/app/src/main/res/drawable/contour.xml
+++ b/app/src/main/res/drawable/contour.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:radius="1dp">
-    </corners>
-
     <stroke
-        android:width="1dp"
-        android:color="#808080" />
+        android:color="#1E522D"
+        android:width="3dp"/>
+    <corners
+        android:radius="10dp"/>
 </shape>
