--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -64,7 +64,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/email"
+                    android:src="@drawable/mail2"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp">
                 </ImageView>
