--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#232323">
+        android:background="@color/joli_vert">
 
         <TextView
             android:layout_width="match_parent"
@@ -33,7 +33,8 @@
         android:textSize="20dp"
         android:layout_marginBottom="50dp"
         android:layout_marginTop="50dp"
-        android:layout_marginStart="20dp">
+        android:layout_marginStart="20dp"
+        android:textColor="@color/joli_vert">
 
     </TextView>
 
@@ -56,7 +57,7 @@
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="36dp"
-                android:src="@drawable/email"
+                android:src="@drawable/mail2"
                 android:layout_marginEnd="10dp">
             </ImageView>
 
@@ -69,7 +70,7 @@
                 android:hint="E-mail"
                 android:textColorHint="@android:color/darker_gray"
                 android:backgroundTint="@android:color/darker_gray"
-                android:textColor="@android:color/darker_gray">
+                android:textColor="@color/joli_vert">
             </EditText>
         </LinearLayout>
 
@@ -93,7 +94,7 @@
                 android:hint="@string/mdp"
                 android:textColorHint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray"
-                android:backgroundTint="@android:color/darker_gray">
+                android:backgroundTint="@color/joli_vert">
             </EditText>
         </LinearLayout>
     </LinearLayout>
