--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#232323">
+        android:background="@color/joli_vert">
 
         <ImageView
             android:id="@+id/retour"
@@ -40,9 +40,10 @@
         android:layout_height="wrap_content"
         android:text="@string/create_account"
         android:textSize="20sp"
-        android:padding="15dp"
+        android:paddingVertical="15dp"
         android:layout_marginBottom="20dp"
-        android:textColor="@android:color/darker_gray">
+        android:textColor="@color/joli_vert"
+        android:layout_marginStart="20dp">
     </TextView>
 
     <LinearLayout
@@ -60,7 +61,7 @@
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="36dp"
-                android:src="@drawable/face"
+                android:src="@drawable/me"
                 android:layout_gravity="center_vertical">
             </ImageView>
 
@@ -71,7 +72,7 @@
                 android:hint="@string/name"
                 android:textColorHint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray"
-                android:backgroundTint="@android:color/darker_gray"
+                android:backgroundTint="@color/joli_vert"
                 >
             </EditText>
         </LinearLayout>
@@ -85,7 +86,7 @@
             android:textColorHint="@android:color/darker_gray"
             android:layout_marginStart="40dp"
             android:textColor="@android:color/darker_gray"
-            android:backgroundTint="@android:color/darker_gray">
+            android:backgroundTint="@color/joli_vert">
 
         </EditText>
 
@@ -99,7 +100,7 @@
         <ImageView
             android:layout_width="43dp"
             android:layout_height="36dp"
-            android:src="@drawable/mail"
+            android:src="@drawable/mail2"
             android:layout_gravity="center_vertical">
         </ImageView>
 
@@ -111,7 +112,7 @@
             android:hint="@string/email"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray"
-            android:backgroundTint="@android:color/darker_gray">
+            android:backgroundTint="@color/joli_vert">
         </EditText>
     </LinearLayout>
     <LinearLayout
@@ -123,7 +124,7 @@
         <ImageView
             android:layout_width="43dp"
             android:layout_height="36dp"
-            android:src="@drawable/mdp"
+            android:src="@drawable/cadena"
             android:layout_gravity="center_vertical">
         </ImageView>
 
@@ -134,7 +135,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/mdp"
             android:textColorHint="@android:color/darker_gray"
-            android:textColor="@android:color/darker_gray">
+            android:textColor="@color/joli_vert">
         </EditText>
     </LinearLayout>
     <LinearLayout
@@ -146,7 +147,7 @@
         <ImageView
             android:layout_width="43dp"
             android:layout_height="36dp"
-            android:src="@drawable/tel"
+            android:src="@drawable/phone"
             android:layout_gravity="center_vertical">
         </ImageView>
         <Spinner
@@ -161,8 +162,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/phone"
             android:textColorHint="@android:color/darker_gray"
-            android:textColor="@android:color/darker_gray"
-            android:backgroundTint="@android:color/darker_gray">
+            android:textColor="@color/joli_vert"
+            android:backgroundTint="@color/joli_vert">
         </EditText>
     </LinearLayout>
     <Button
