--- a/app/src/main/res/layout/item_appliance.xml
+++ b/app/src/main/res/layout/item_appliance.xml
@@ -3,17 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:padding="20dp"
+        android:background="@drawable/contour"
+        android:layout_marginVertical="5dp"
+        >
     <LinearLayout
         android:id="@+id/appliance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/imageViewAppliance"
@@ -34,19 +39,26 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"/>
     </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/info"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appliance"
+        android:layout_marginTop="10dp"
+        android:layout_alignStart="@id/appliance"
+        android:layout_alignEnd="@id/appliance"
+        >
+
         <EditText
             android:id="@+id/editTextRef"
-            android:inputType="text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:hint="@string/reference"
+            android:inputType="text"
             android:textColorHint="@android:color/darker_gray"
-            android:textColor="@android:color/darker_gray"
-            android:backgroundTint="@android:color/darker_gray"/>
+            android:textColor="@color/black"
+            android:backgroundTint="@color/joli_vert" />
         <EditText
             android:id="@+id/editTextWattage"
             android:inputType="number"
@@ -54,8 +66,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/wattage"
             android:textColorHint="@android:color/darker_gray"
-            android:textColor="@android:color/darker_gray"
-            android:backgroundTint="@android:color/darker_gray"/>
-    </LinearLayout>
-    </LinearLayout>
+            android:textColor="@color/black"
+            android:backgroundTint="@color/joli_vert"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
