--- a/app/src/main/res/layout/fragment_mon_habitat.xml
+++ b/app/src/main/res/layout/fragment_mon_habitat.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:text="@string/my_informations"
         android:textColor="@color/joli_vert"/>
 
@@ -23,78 +23,95 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="15dp"
-            android:layout_marginHorizontal="30dp"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="10dp"
+            android:orientation="vertical"
+            android:background="@drawable/recttransparent"
+            android:padding="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:weightSum="100">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/lastname" />
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/lastname"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/nompersonne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:weightSum="100">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/name" />
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/name"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/prenompersonne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:weightSum="100">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/email" />
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/email"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/adressepersonne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:weightSum="100">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/phone" />
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="30"
+                    android:text="@string/phone"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/telpersonne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -102,92 +119,112 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:text="@string/my_habitat"
-            android:textColor="@color/joli_vert"/>
+            android:textStyle="bold"
+            android:textColor="@color/joli_vert" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="15dp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/recttransparent"
+            android:padding="15dp"
             android:orientation="vertical">
 
             <LinearLayout
+                android:weightSum="100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="Floor"/>
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/floor"
+                    android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/etagepersonne"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="70"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <LinearLayout
+                android:weightSum="100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/area"/>
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/area"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/areapersonne"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="70"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <LinearLayout
+                android:weightSum="100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/appliances"/>
+                    android:layout_weight="30"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/appliances"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/appliancepersonne"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="70"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <LinearLayout
+                android:weightSum="100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:text="Total consumption"/>
+                    android:layout_weight="35"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/total_consumption"
+                    android:textStyle="bold"
+                    android:layout_gravity="end"/>
 
                 <TextView
                     android:id="@+id/consommationpersonne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_weight="65"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
             </LinearLayout>
         </LinearLayout>
         <Button
             android:id="@+id/btnEdit"
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
