--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PowerHome" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">#232323</item> <!-- Couleur principale -->
+        <item name="colorPrimary">@color/joli_vert</item> <!-- Couleur principale -->
         <item name="colorOnPrimary">#FFFFFF</item> <!-- Couleur du texte -->
         <item name="drawerArrowStyle">@style/DrawerIcon</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Theme.PowerHome" parent="Base.Theme.PowerHome" />
