--- a/app/src/main/res/drawable/contouretage.xml
+++ b/app/src/main/res/drawable/contouretage.xml
@@ -2,8 +2,9 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <stroke
+        android:color="#1E522D"
+        android:width="1dp"/>
     <corners
-        android:radius="15dp"/>
-    <solid
-        android:color="#E73D3D"/>
+        android:radius="10dp"/>
 </shape>
