--- a/app/src/main/res/drawable/recttransparent.xml
+++ b/app/src/main/res/drawable/recttransparent.xml
@@ -5,5 +5,5 @@
     <corners
         android:radius="15dp"/>
     <solid
-        android:color="#E73D3D"/>
+        android:color="#261E522D"/>
 </shape>
