--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/joli_vert">
+        android:background="@color/joli_vert"
+        android:layout_marginBottom="15dp">
 
         <ImageView
             android:id="@+id/retour"
@@ -62,7 +63,8 @@
                 android:layout_width="43dp"
                 android:layout_height="36dp"
                 android:src="@drawable/me"
-                android:layout_gravity="center_vertical">
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp">
             </ImageView>
 
             <EditText
@@ -70,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
+                android:textSize="18sp"
                 android:textColorHint="@android:color/darker_gray"
                 android:textColor="@android:color/darker_gray"
                 android:backgroundTint="@color/joli_vert"
@@ -83,8 +86,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             android:hint="@string/lastname"
+            android:textSize="18sp"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="44dp"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@color/joli_vert">
 
@@ -98,10 +102,11 @@
         android:paddingBottom="50dp">
 
         <ImageView
-            android:layout_width="43dp"
-            android:layout_height="36dp"
+            android:layout_width="35dp"
+            android:layout_height="25dp"
             android:src="@drawable/mail2"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="5dp">
         </ImageView>
 
         <EditText
@@ -110,6 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
+            android:textSize="18sp"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@android:color/darker_gray"
             android:backgroundTint="@color/joli_vert">
@@ -122,10 +128,11 @@
         android:paddingBottom="50dp">
 
         <ImageView
-            android:layout_width="43dp"
-            android:layout_height="36dp"
+            android:layout_width="35dp"
+            android:layout_height="25dp"
             android:src="@drawable/cadena"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="5dp">
         </ImageView>
 
         <EditText
@@ -134,6 +141,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/mdp"
+            android:textSize="18sp"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@color/joli_vert">
         </EditText>
@@ -145,8 +153,8 @@
         android:paddingBottom="50dp">
 
         <ImageView
-            android:layout_width="43dp"
-            android:layout_height="36dp"
+            android:layout_width="35dp"
+            android:layout_height="30dp"
             android:src="@drawable/phone"
             android:layout_gravity="center_vertical">
         </ImageView>
@@ -161,6 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/phone"
+            android:textSize="18sp"
             android:textColorHint="@android:color/darker_gray"
             android:textColor="@color/joli_vert"
             android:backgroundTint="@color/joli_vert">
@@ -168,12 +177,13 @@
     </LinearLayout>
     <Button
         android:id="@+id/btnNext"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Next"
+        android:text="@string/next"
         android:background="@drawable/rect"
         android:textSize="20sp"
-        android:textColor="#FFFF">
+        android:textColor="#FFFF"
+        android:layout_gravity="center">
 
     </Button>
     </LinearLayout>
