--- a/app/src/main/res/layout/item_habitat.xml
+++ b/app/src/main/res/layout/item_habitat.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/nomHabitant"
             android:text="Gaëtan Leclair"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_marginBottom="5dp">
         </TextView>
@@ -41,10 +42,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/contour"
-            android:layout_marginTop="5dp"
+            android:background="@drawable/contouretage"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:padding="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
