--- a/app/src/main/res/drawable/rect3.xml
+++ b/app/src/main/res/drawable/rect3.xml
@@ -8,5 +8,5 @@
     <corners
         android:radius="1dp"/>
     <solid
-        android:color="#D3CABB"/>
+        android:color="#999999"/>
 </shape>
