--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -51,7 +51,7 @@
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="left"
-                android:textColor="@android:color/darker_gray">
+                android:textColor="@color/joli_vert">
             </TextView>
 
             <LinearLayout
@@ -112,7 +112,7 @@
                 android:text="@string/mdp_oublie"
                 android:textSize="16dp"
                 android:background="@android:color/transparent"
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@color/vert"
                 android:layout_gravity="right">
             </Button>
 
@@ -182,7 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nv"
-                android:textColor="@android:color/darker_gray">
+                android:textColor="@color/joli_vert">
             </TextView>
 
             <Button
@@ -191,7 +191,7 @@
                 android:layout_width="wrap_content"
                 android:text="@string/creer_compte"
                 android:background="@android:color/transparent"
-                android:textColor="@android:color/holo_blue_dark">
+                android:textColor="@color/vert">
 
             </Button>
         </LinearLayout>
@@ -214,7 +214,7 @@
                 android:background="@android:color/transparent"
                 android:text="@string/facebook"
                 android:layout_marginStart="5dp"
-                android:textColor="@android:color/holo_blue_dark">
+                android:textColor="@color/vert">
             </Button>
         </LinearLayout>
     </LinearLayout>
