--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:text="@string/mdp_oublie"
         android:background="@android:color/transparent"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/vert"
         android:layout_gravity="right">
     </Button>
 
@@ -131,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nv"
-            android:textColor="@android:color/darker_gray">
+            android:textColor="@color/joli_vert">
         </TextView>
 
         <Button
@@ -141,7 +141,7 @@
             android:text="@string/creer_compte"
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"
-            android:textColor="@android:color/holo_blue_dark">
+            android:textColor="@color/vert">
 
         </Button>
     </LinearLayout>
@@ -192,7 +192,7 @@
             android:background="@android:color/transparent"
             android:text="@string/facebook"
             android:layout_marginStart="5dp"
-            android:textColor="@android:color/holo_blue_dark">
+            android:textColor="@color/vert">
         </Button>
     </LinearLayout>
 </LinearLayout>
