--- a/app/src/main/res/layout/fragment_edit_appliances.xml
+++ b/app/src/main/res/layout/fragment_edit_appliances.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.EditAppliancesFragment"
     android:layout_marginTop="20dp">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -25,28 +25,34 @@
             android:paddingHorizontal="10dp"
             android:textColor="@color/white"
             android:layout_marginBottom="10dp"
-            android:text="@string/add_appliances"/>
+            android:text="@string/add_appliances"
+            android:layout_below="@id/editAppliancesContainer"
+            android:layout_alignStart="@id/backsave"
+            android:layout_alignEnd="@id/backsave"
+            />
 
         <LinearLayout
+            android:id="@+id/backsave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <Button
-            android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="@drawable/rect3"
-            android:text="@string/back"
-            android:layout_marginEnd="5dp"/>
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rect"
-            android:textColor="@color/white"
-            android:layout_marginStart="5dp"
-            android:text="@string/save"/>
+            android:orientation="horizontal"
+            android:layout_below="@id/btnAddAppliance">
+            <Button
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:background="@drawable/rect3"
+                android:text="@string/back"
+                android:layout_marginEnd="5dp"/>
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rect"
+                android:textColor="@color/white"
+                android:layout_marginStart="5dp"
+                android:text="@string/save"/>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
