--- a/app/src/main/res/layout/fragment_edit_appliances.xml
+++ b/app/src/main/res/layout/fragment_edit_appliances.xml
@@ -4,8 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.EditAppliancesFragment"
-    android:layout_marginTop="20dp">
-    <RelativeLayout
+    android:layout_marginTop="20dp"
+    android:paddingBottom="35dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -16,43 +20,44 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp"/>
-
-        <Button
-            android:id="@+id/btnAddAppliance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rect2"
-            android:paddingHorizontal="10dp"
-            android:textColor="@color/white"
-            android:layout_marginBottom="10dp"
-            android:text="@string/add_appliances"
-            android:layout_below="@id/editAppliancesContainer"
-            android:layout_alignStart="@id/backsave"
-            android:layout_alignEnd="@id/backsave"
-            />
-
         <LinearLayout
-            android:id="@+id/backsave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@id/btnAddAppliance">
+            android:orientation="vertical"
+            android:gravity="center">
             <Button
-                android:id="@+id/btnBack"
+                android:id="@+id/btnAddAppliance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rect2"
+                android:paddingHorizontal="10dp"
+                android:textColor="@color/white"
+                android:layout_marginBottom="10dp"
+                android:text="@string/add_appliances" />
+
+            <LinearLayout
+                android:id="@+id/backsave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:background="@drawable/rect3"
-                android:text="@string/back"
-                android:layout_marginEnd="5dp"/>
-            <Button
-                android:id="@+id/btnSave"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rect"
-                android:textColor="@color/white"
-                android:layout_marginStart="5dp"
-                android:text="@string/save"/>
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btnBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:background="@drawable/rect3"
+                    android:text="@string/back"
+                    android:layout_marginEnd="5dp"/>
+                <Button
+                    android:id="@+id/btnSave"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rect"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="5dp"
+                    android:text="@string/save"/>
+            </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
