--- a/app/src/main/res/layout/item_time_slot.xml
+++ b/app/src/main/res/layout/item_time_slot.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/timeSlotButton"
-    android:layout_width="100dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:layout_weight="1"
-    android:backgroundTint="@android:color/darker_gray"
+    android:backgroundTint="@color/green"
     android:text="9:00 AM"
-    android:textColor="@android:color/white"
-    android:background="@drawable/day_background"/>
+    android:textColor="@android:color/white"/>
