--- a/app/src/main/res/layout/item_time_slot.xml
+++ b/app/src/main/res/layout/item_time_slot.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatButton
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/timeSlotButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:backgroundTint="@color/green"
-    android:text="9:00 AM"
-    android:textColor="@android:color/white"/>
+    android:textColor="@android:color/white"
+    android:padding="8dp"
+    android:ellipsize="end"
+    android:maxLines="2"
+    android:textAlignment="center"/>
