--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -3,7 +3,7 @@
     android:layout_width="45dp"
     android:layout_height="45dp"
     android:layout_margin="3dp"
-    android:background="@drawable/day_background"
+    android:background="@drawable/contour"
     android:clickable="true"
     android:focusable="true">
 
@@ -14,5 +14,5 @@
         android:layout_gravity="center"
         android:text="1"
         android:textSize="18sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/black"/>
 </FrameLayout>
