forgot password et edit profile (non fonctionnels mais c'est là)

--- a/app/src/main/res/layout/fragment_mon_habitat.xml
+++ b/app/src/main/res/layout/fragment_mon_habitat.xml
@@ -222,6 +222,18 @@
                     android:layout_gravity="center"/>
             </LinearLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnEditProfile"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/edit_profile"
+            android:background="@drawable/rect"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/white"/>
+
         <Button
             android:id="@+id/btnEdit"
             android:layout_marginTop="20dp"
@@ -231,9 +243,7 @@
             android:text="@string/edit_my_appliances"
             android:background="@drawable/rect"
             android:paddingHorizontal="10dp"
-            android:textColor="@color/white"
-            >
-        </Button>
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 
